// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecoverTransaction render should disable "Recover" button 1`] = `
<v-form
  v-on:submit="bound recoverTransaction"
>
  <v-textarea
    label="RLP encoded transaction"
    v-model="transactionHash"
  />
   
  <v-button
    class-name="is-primary is-medium"
    disabled="true"
  >
    
    Recover transaction
  
  </v-button>
   
  <!---->
</v-form>
`;

exports[`RecoverTransaction render should enable "Recover" button 1`] = `
<v-form
  v-on:submit="bound recoverTransaction"
>
  <v-textarea
    label="RLP encoded transaction"
    v-model="transactionHash"
  />
   
  <v-button
    class-name="is-primary is-medium"
  >
    
    Recover transaction
  
  </v-button>
   
  <!---->
</v-form>
`;

exports[`RecoverTransaction render should render the initial state of the component 1`] = `
<v-form
  v-on:submit="bound recoverTransaction"
>
  <v-textarea
    label="RLP encoded transaction"
    v-model="transactionHash"
  />
   
  <v-button
    class-name="is-primary is-medium"
    disabled="true"
  >
    
    Recover transaction
  
  </v-button>
   
  <!---->
</v-form>
`;

exports[`RecoverTransaction render should show restored transaction data 1`] = `
<v-form
  v-on:submit="bound recoverTransaction"
>
  <v-textarea
    label="RLP encoded transaction"
    v-model="transactionHash"
  />
   
  <v-button
    class-name="is-primary is-medium"
    disabled="true"
  >
    
    Recover transaction
  
  </v-button>
   
  <div
    class="field"
  >
    <label
      class="label"
    >
      Recovered transaction
    </label>
     
    <p
      class="code"
    >
      
      {"timestamp":1535035155,"from":"0xb14ab53e38da1c172f877dbc6d65e4a1b0474c3c","to":"0x9ECEEfDF3554E178a6549006F2C02163E63C9fd8","hash":"0x53d26efcde07f1b2b68f3e1de93b730deabd1094970d9a68efb799e048e00892","value":0.048671,"input":"0x","success":true,"state":"success","date":"2018-08-23T14:39:15.000Z"}
    
    </p>
  </div>
</v-form>
`;
